--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -20,5 +20,5 @@ nav ul li a {
 }
 
 nav div li a {
-    font-size: 18px;
+    font-size: 26px;
 }
